--- a/npm/ng-packs/packages/components/extensible/src/lib/components/extensible-form/extensible-form.component.html
+++ b/npm/ng-packs/packages/components/extensible/src/lib/components/extensible-form/extensible-form.component.html
@@ -1,46 +1,35 @@
 @if (form) {
   @for (groupedProp of groupedPropList.items; track $index) {
     <ng-container *abpPropData="let data; fromList: groupedProp.formPropList; withRecord: record">
-      @if(groupedProp.group?.className) {
-        <div [ngClass]="groupedProp.group?.className"
-             [attr.data-name]="groupedProp.group?.name || groupedProp.group?.className"
-        >
-          <ng-container
-            [ngTemplateOutlet]="propListTemplate"
-            [ngTemplateOutletContext]="{ groupedProp: groupedProp, data: data }"
-          >
-          </ng-container>
-        </div>
-      } @else {
-          <ng-container
-            [ngTemplateOutlet]="propListTemplate"
-            [ngTemplateOutletContext]="{ groupedProp: groupedProp, data: data }"
-          >
-          </ng-container>
-      }
+      <ng-container [ngTemplateOutlet]="propListTemplate" [ngTemplateOutletContext]="{
+              groupedProp: groupedProp,
+              data: data,
+              group: groupedProp.group,
+            }">
+      </ng-container>
     </ng-container>
-  } 
+  }
 }
 
-<ng-template let-groupedProp="groupedProp" let-data="data" #propListTemplate>
+<ng-template let-groupedProp="groupedProp" let-data="data" let-group="group" #propListTemplate>
   @for (prop of groupedProp.formPropList; let first = $first; track prop.name) {
     @if(prop.visible(data)) {
-      <ng-container
-        [formGroupName]="extraPropertiesKey"
-        *ngIf="extraProperties.controls[prop.name]; else tempDefault"
-      >
+      <ng-container [formGroupName]="extraPropertiesKey" *ngIf="extraProperties.controls[prop.name]; else tempDefault">
         <abp-extensible-form-prop [prop]="prop" [data]="data" [class]="prop.className">
         </abp-extensible-form-prop>
       </ng-container>
 
       <ng-template #tempDefault>
-        <abp-extensible-form-prop
-          [class]="prop.className"
-          *ngIf="form.get(prop.name)"
-          [prop]="prop"
-          [data]="data"
-          [first]="first"
-        ></abp-extensible-form-prop>
+        @if (group.className) {
+          <div [ngClass]="group.className"
+            [attr.data-name]="group.name || group.className">
+            <abp-extensible-form-prop [class]="prop.className" *ngIf="form.get(prop.name)" [prop]="prop" [data]="data"
+              [first]="first"></abp-extensible-form-prop>
+          </div>
+        } @else {
+          <abp-extensible-form-prop [class]="prop.className" *ngIf="form.get(prop.name)" [prop]="prop" [data]="data"
+            [first]="first"></abp-extensible-form-prop>
+        }
       </ng-template>
     }
   }
